<?xml version="1.0"?>
<package>
  <name>rosdbcpy</name>
  <version>0.0.1</version>
  <description>The rosdbcpy package</description>
  <maintainer email="florian.kromer@mailbox.org">Florian Kromer</maintainer>
  <license>Apache 2.0</license>
  <author email="florian.kromer@mailbox.org">Florian Kromer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosunit</test_depend>

  <export>

  </export>
</package>
